--- a/test/Makefile
+++ b/test/Makefile
@@ -5,8 +5,8 @@ INCLUDES = -I../inc -I../libft/inc -I./unity -I./inc
 # SANITIZE = -fsanitize=address
 TEST = ./unity/unity.c ./test.c
 TESTS = \
-$T/test_tokenizer.c
-# $T/test_ft_cmdtrim.c
+	$T/test_ft_cmd_trim.c
+# $T/test_tokenizer.c
 MINISHELL =
 PS := $(filter-out %main.c, $(MINISHELL))
 
