more bugs fixed. works perfectly. now fixing here_doc bug

--- a/test/Makefile
+++ b/test/Makefile
@@ -5,7 +5,7 @@ INCLUDES = -I../inc -I../libft/inc -I./unity -I./inc
 # SANITIZE = -fsanitize=address
 TEST = ./unity/unity.c ./test.c
 TESTS = \
-	$T/test_ft_cmd_trim.c	$T/test_ft_expand.c	$T/test_ft_env.c $T/test_ft_split_operators.c $T/test_ft_str_trim.c $T/test_ft_parse_args.c
+	$T/test_ft_cmd_trim.c	$T/test_ft_expand.c	$T/test_ft_env.c $T/test_ft_split_operators.c $T/test_ft_str_trim.c
 MINISHELL =
 PS := $(filter-out %main.c, $(MINISHELL))
 
