--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,7 @@ TEST = ./unity/unity.c ./test.c
 TESTS = \
 	$T/test_ft_cmd_trim.c	$T/test_ft_expand.c	$T/test_ft_env.c					\
 	$T/test_ft_split_operators.c	$T/test_ft_str_trim.c	$T/test_ft_executor.c	\
-	$T/test_ft_get_exec_path.c
+	$T/test_ft_get_exec_path.c	$T/test_ft_utils.c
 MINISHELL =
 PS := $(filter-out %main.c, $(MINISHELL))
 
